--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -11,7 +11,7 @@
   --font-stack: "Source Code Pro", "Helvetica";
 }
 
-/* nts: does bootstrap reset? */
+/* nts: does bootstrap do this? */
 * {
   margin: 0;
   padding: 0;
@@ -31,20 +31,64 @@ body {
   font-family: var(--font-stack);
 }
 
+/* apply this class when wall modals are active */
+.blur {
+  filter: blur(100px);
+}
+
+.svg-header {
+  position: absolute;
+  top: 0;
+  z-index: -1;
+}
+
+.svg-bottom {
+  position: absolute;
+  bottom: -30px;
+  z-index: -1;
+}
+
 /* HEADER STYLES */
 .main-header {
   background-color: var(--main-second-bg-color);
   color: var(--main-text-color);
   padding: 7px 0px;
-  margin-bottom: 30px;
   position: relative;
   z-index: 2;
-  border-bottom: 1px solid var(--main-border-color);
+  margin-bottom: 3rem;
+  margin-top: 2rem;
+}
+
+.logo-container{
+  list-style: none;
+  display: flex;
 }
 
 .main-logo {
   color: #98c379;
   white-space: nowrap;
+}
+
+.main-logo:hover {
+  box-shadow: inset 0 0 2px rgba(255, 255, 255, 0.05),
+    inset 4px 4px 6px rgba(0, 0, 0, 0.2);
+  color: yellow;
+  text-shadow: 0 0 15px yellow, 0 0 25px yellow;
+  animation: glow 1.5s linear infinite;
+  transition: all 0.3s ease-in-out ;
+}
+
+@keyframes glow {
+  0% {
+    filter: hue-rotate(0deg);
+  }
+  100% {
+    filter: hue-rotate(360deg);
+  }
+}
+
+.showing-settings {
+  color: var(--main-highlight-color);
 }
 
 .settings {
@@ -88,6 +132,46 @@ body {
   }
 }
 
+/*  hamburger-menu styles */
+.hamburger-menu {
+  position: relative;
+  display: block !important;
+  min-width: 35px;
+  cursor: pointer;
+  appearance: none;
+  background: none;
+  outline: none !important;
+  border: none;
+}
+
+.hamburger-menu .bar,
+.hamburger-menu:after,
+.hamburger-menu:before {
+  content: "";
+  display: block;
+  width: 100%;
+  min-width: 23px;
+  height: 4px;
+  background-color: var(--main-text-color);
+  margin: 6px 0px;
+  transition: 0.4s;
+  border-radius: 20px;
+}
+
+.hamburger-menu.is-active:before {
+  transform: rotate(-45deg) translate(-8px, 6px);
+}
+
+.hamburger-menu.is-active:after {
+  transform: rotate(45deg) translate(-8px, -6px);
+}
+
+.hamburger-menu.is-active .bar {
+  opacity: 0;
+}
+
+/* hamburger-menu styles end */
+
 /* HEADER STYLES END */
 
 /* CHAT STYLES */
@@ -119,6 +203,12 @@ body {
 .chat-list-container li {
   padding: 0.5rem 1rem;
   border-bottom: 1px solid var(--main-border-color);
+}
+
+.message-date {
+  color: #919191;
+  margin-left: 10px;
+  font-size: 0.9rem;
 }
 
 .chat-form {
@@ -184,7 +274,6 @@ body {
   border-left: 1px solid var(--main-border-color);
 }
 
-/* Handle on hover */
 .chat-container ul::-webkit-scrollbar-thumb:hover {
   background: var(--main-highlight-color);
 }
@@ -198,8 +287,53 @@ body {
   right: 0px;
   top: 0px;
   z-index: 1;
-  overflow: hidden;
   pointer-events: none;
+}
+
+.account-slideout .slideout {
+  height: 100%;
+  width: 100%;
+  background-color: var(--main-second-bg-color);
+  border-left: 1px solid var(--main-border-color);
+  transition: transform 0.5s ease-in-out;
+  transform: translateX(200%);
+  padding-top: 5.3em;
+  color: var(--main-text-color);
+}
+
+.account-slideout.active {
+  pointer-events: all;
+}
+
+.account-slideout.active .slideout {
+  transform: translateX(0%);
+}
+
+.accordion-heading {
+  text-align: center;
+  background-color: #c9d1d9;
+  color: #161b22;
+  padding: 7px 0px 10px;
+  margin-bottom: 0px;
+  border-top: 1px solid var(--main-second-bg-color);
+  position: relative;
+  cursor: pointer;
+  transition: all 0.2s;
+}
+
+.accordion-heading.accordion-heading::after {
+  content: "\f078";
+  font-family: FontAwesome;
+  position: absolute;
+  right: 13px;
+  top: 7px;
+  font-size: 30px;
+  color: var(--main-second-bg-color);
+  transition: all 0.2s;
+}
+
+.accordion-heading.active::after {
+  transform: rotate(180deg);
 }
 
 .account-pfp {
@@ -217,59 +351,6 @@ body {
   width: 20px;
 }
 
-.account-slideout .slideout {
-  height: 100%;
-  width: 100%;
-  background-color: var(--main-second-bg-color);
-  border-left: 1px solid var(--main-border-color);
-  transition: transform 0.5s ease-in-out;
-  transform: translateX(100%);
-  padding-top: 5.3em;
-  color: var(--main-text-color);
-}
-.account-slideout.active {
-  pointer-events: all;
-}
-.account-slideout.active .slideout {
-  transform: translateX(0%);
-}
-.account-slideout .slideout h2 {
-  text-align: center;
-  font-weight: 300;
-  font-size: 30px;
-}
-.account-slideout .slideout h3 {
-  text-align: center;
-  background-color: #c9d1d9;
-  color: #161b22;
-  padding: 7px 0px 10px;
-  margin-bottom: 0px;
-  border-top: 1px solid var(--main-second-bg-color);
-  position: relative;
-  cursor: pointer;
-  transition: all 0.2s;
-}
-
-.account-slideout .slideout h3.hover-btn:hover {
-  background-color: var(--main-second-bg-color);
-  color: var(--main-text-color);
-  border: 2px solid var(--main-text-color);
-}
-
-.account-slideout .slideout h3.accordion-heading::after {
-  content: "\f078";
-  font-family: FontAwesome;
-  position: absolute;
-  right: 13px;
-  top: 7px;
-  font-size: 30px;
-  color: var(--main-second-bg-color);
-  transition: all 0.2s;
-}
-.account-slideout .slideout h3.active::after {
-  transform: rotate(180deg);
-}
-/* Mobile styling start */
 @media only screen and (max-width: 767px) {
   .account-slideout {
     width: 100vw;
@@ -279,22 +360,8 @@ body {
     padding-top: 4.3em;
   }
 }
-/* Mobile styling end */
-/* Account slideout styling end */
 
-/* apply this class when modal is active */
-.blur {
-  filter: blur(100px);
-}
-
-/*  */
-.logged-in {
-  color: green;
-}
-
-.logged-out {
-  color: red;
-}
+/* Account slideout styles end */
 
 /* List styling starts */
 .list-container {
@@ -303,6 +370,9 @@ body {
   overflow-y: auto;
   border: 1px solid var(--main-text-color);
   max-height: 0%;
+  background: var(--main-second-bg-color);
+  border-left: 1px solid var(--main-border-color);
+  border-radius: 3px;
   padding: 0px;
   transition: all 0.5s;
 }
@@ -311,30 +381,6 @@ body {
   max-height: 50%;
   padding: 5px 0px;
 }
-
-/* Scroll bar styling start */
-.list-container::-webkit-scrollbar {
-  width: 12px;
-}
-
-/* Track */
-.list-container::-webkit-scrollbar-track {
-  background: var(--main-bg-color);
-  border-left: 1px solid var(--main-border-color);
-}
-
-/* Thumb */
-.list-container::-webkit-scrollbar-thumb {
-  background: #21262d;
-  border-radius: 3px;
-  border-left: 1px solid var(--main-border-color);
-}
-
-/* Handle on hover */
-.list-container::-webkit-scrollbar-thumb:hover {
-  background: var(--main-highlight-color);
-}
-/* Scroll bar styling end */
 
 .items-list {
   list-style: none;
@@ -350,81 +396,22 @@ body {
 .items-list li:hover {
   color: #1f6feb;
 }
-/* Mobile styling starts */
-/* @media only screen and (max-width: 767px) {
-  
-} */
-/* Mobile styling ends */
-/* List styling ends */
-
-.message-date {
-  color: #919191;
-  margin-left: 10px;
-  font-size: 0.9rem;
-}
-
-/* Menu hamburger-menu styling start */
-.hamburger-menu {
-  position: relative;
-  display: block !important;
-  min-width: 35px;
-  cursor: pointer;
-  appearance: none;
-  background: none;
-  outline: none !important;
-  border: none;
-}
-
-.hamburger-menu .bar,
-.hamburger-menu:after,
-.hamburger-menu:before {
-  content: "";
-  display: block;
-  width: 100%;
-  min-width: 23px;
-  height: 4px;
-  background-color: var(--main-text-color);
-  margin: 6px 0px;
-  transition: 0.4s;
-  border-radius: 20px;
-}
-
-.hamburger-menu.is-active:before {
-  transform: rotate(-45deg) translate(-8px, 6px);
-}
-
-.hamburger-menu.is-active:after {
-  transform: rotate(45deg) translate(-8px, -6px);
-}
-
-.hamburger-menu.is-active .bar {
-  opacity: 0;
-}
-
-/* Menu hamburger-menu styling end */
-
-.error-message {
-  color: red;
-  border-top: solid 1px red;
-  margin: 10px 0;
-  text-align: center;
-}
 
 .active-room {
   color: #238636;
-}
-
-.fav-tech-btn {
-  background-color: #22272e;
-  color: #819d9f;
-  border: #819d9f 1px solid;
-}
-
-.fav-tech-btn:hover {
-  color: #98c379;
 }
 
 .dm-list {
   margin: 0;
   padding: 0;
 }
+
+.logged-in {
+  color: green;
+}
+
+.logged-out {
+  color: red;
+}
+
+/* List styling ends */
