--- a/public/css/user-info-modal.css
+++ b/public/css/user-info-modal.css
@@ -1,23 +1,10 @@
-/* .modal {
-  display: none; 
-  position: absolute; 
-  z-index: 5; 
-  padding-top: 100px; 
-  left: 0;
-  top: 0;
-  width: 100%; 
-  height: 100%; 
-  overflow: auto; 
-  background-color: transparent;
-} */
-
-/* Modal Content */
 .modal-content {
   display: none;
   position: absolute;
-  right: 40%;
+  top: 15%;
+  right: 100%;
   width: 22rem;
-  height: 19.4rem;
+  min-height: fit-content;
   background-color: #32353b;
   color: #c9d1d9;
   margin-left: auto;
@@ -32,7 +19,7 @@
 }
 
 .dm-input {
-  color: #c9d1d9;
+  color: #98c379;
   background-color: #5e636b;
   padding: 10px;
   color: #c9cdd4;
@@ -48,9 +35,19 @@
 }
 
 .username-modal-styles {
-  font-size: 1.4rem;
+  font-size: 2.2rem;
 }
 
-.null {
+.null-color {
   color: #d19a66;
+}
+
+.favlang-usermodal{
+  margin-top: -30px;
+}
+
+@media only screen and (max-width: 770px) {
+  .modal-content {
+    display: none;
+  }
 }
