--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@300&family=VT323&display=swap");
 
 :root {
   --main-bg-color: #0d1117;
@@ -49,44 +49,64 @@ body {
 }
 
 /* HEADER STYLES */
-.main-header {
-  background-color: var(--main-second-bg-color);
-  color: var(--main-text-color);
-  padding: 7px 0px;
-  position: relative;
-  z-index: 2;
-  margin-bottom: 3rem;
-  margin-top: 2rem;
-}
-
-.logo-container{
+.logo-container {
   list-style: none;
   display: flex;
+  gap: 5px;
+}
+
+.main-header {
+  color: var(--main-text-color);
+  position: relative;
+  z-index: 2;
+  margin-bottom: 1rem;
+}
+
+.main-header:hover {
+  cursor: default;
+}
+
+.logo-container {
+  list-style: none;
+  display: flex;
+  margin-bottom: 0;
 }
 
 .main-logo {
   color: #98c379;
   white-space: nowrap;
+  font-family: "VT323";
+  font-size: calc(5rem + 1vw);
 }
 
+.quotes {
+  color: #98c379;
+  align-self: center;
+  margin-bottom: 5rem;
+  font-size: 2rem;
+}
+
+/* shine */
 .main-logo:hover {
-  box-shadow: inset 0 0 2px rgba(255, 255, 255, 0.05),
-    inset 4px 4px 6px rgba(0, 0, 0, 0.2);
-  color: yellow;
-  text-shadow: 0 0 15px yellow, 0 0 25px yellow;
-  animation: glow 1.5s linear infinite;
-  transition: all 0.3s ease-in-out ;
+  -webkit-mask-image: linear-gradient(
+    -75deg,
+    rgba(0, 0, 0, 0.6) 30%,
+    #000 50%,
+    rgba(0, 0, 0, 0.6) 70%
+  );
+  -webkit-mask-size: 200%;
+  animation: shine 2s infinite;
 }
 
-@keyframes glow {
-  0% {
-    filter: hue-rotate(0deg);
+@-webkit-keyframes shine {
+  from {
+    -webkit-mask-position: 150%;
   }
-  100% {
-    filter: hue-rotate(360deg);
+
+  to {
+    -webkit-mask-position: -50%;
   }
 }
-
 .showing-settings {
   color: var(--main-highlight-color);
 }
@@ -118,6 +138,19 @@ body {
   cursor: pointer;
   background-color: var(--main-title-color);
   color: var(--main-text-color);
+}
+
+@media only screen and (max-width: 768px) {
+  .main-logo {
+    font-size: calc(2rem + 1vw);
+
+  }
+
+  .quotes {
+    align-self: flex-end;
+    margin-bottom: 1rem;
+    font-size: 2rem;
+  }
 }
 
 @media only screen and (min-width: 401px) {
@@ -294,7 +327,6 @@ body {
   height: 100%;
   width: 100%;
   background-color: var(--main-second-bg-color);
-  border-left: 1px solid var(--main-border-color);
   transition: transform 0.5s ease-in-out;
   transform: translateX(200%);
   padding-top: 5.3em;
