--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -143,7 +143,6 @@ body {
 @media only screen and (max-width: 768px) {
   .main-logo {
     font-size: calc(2rem + 1vw);
-
   }
 
   .quotes {
@@ -381,6 +380,21 @@ body {
 .active-list-pfp {
   height: 20px;
   width: 20px;
+}
+
+.dm-list {
+  list-style: none;
+}
+
+.dm-list li:hover {
+  color: var(--main-highlight-color);
+  cursor: pointer;
+}
+
+.dm-list li {
+  display: flex;
+  justify-content: center;
+  gap: 3px;
 }
 
 @media only screen and (max-width: 767px) {
