--- a/views/settings.handlebars
+++ b/views/settings.handlebars
@@ -1,4 +1,5 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css" />
+<link rel="stylesheet" href="/css/settings.css" />
 
 
 <div class="settings-container settings-bg">
